--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rnbwsmk-ai",
-  "version": "0.8.0",
+  "version": "0.9.0-rc",
   "description": "AI assistant for rainbowsmokeofficial.com",
   "type": "module",
   "private": true,
